<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="16dp"
    tools:context=".Trivia.QuizActivity">

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group"
        android:layout_margin="20dp"
        android:onClick="buttonEvent"
        android:text="@string/confirm" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option 1"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option 2"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option 3"
            android:textColor="@android:color/black" />
    </RadioGroup>

    <TextView
        android:id="@+id/LevelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_question_num"
        android:layout_marginTop="20dp"
        android:text="@string/levelString"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/ScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_question_num"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:text="@string/score"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/elapsedTime"
        android:textColor="@android:color/black"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LevelText"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangle_drawable_back"
        android:text="Question\nQuestion\nQuestion"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/text_view_question_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:text="@string/question"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/pauseQuizButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:onClick="pauseEvent"
        android:text="||" />
</RelativeLayout>



